Fixing pricing table button.

--- a/app/assets/stylesheets/koudoku/pricing-table.scss
+++ b/app/assets/stylesheets/koudoku/pricing-table.scss
@@ -32,7 +32,7 @@ ul.koudoku-pricing-table {
         padding-bottom: 7px;
         font-size: 2.5em;
       }
-      a {
+      a, input[type=submit] {
         font-size: 2em;
         font-size: 14pt;
       }
