--- a/app/views/koudoku/subscriptions/edit.html.erb
+++ b/app/views/koudoku/subscriptions/edit.html.erb
@@ -1,3 +1,7 @@
-<h1>What Plan Is Best For You?</h1>
-<%= render 'pricing_table' %>
-<p>You can also <%= link_to 'cancel your subscription', cancel_owner_subscription_path(@owner, @subscription), method: :post %>.</p>
+<% if params['update'] == 'card' %>
+  <%= render 'card', title: "Update Your Payment Information", url: owner_subscription_path(@owner, @subscription) %>
+<% else %>
+  <h1>What Plan Is Best For You?</h1>
+  <%= render 'pricing_table' %>
+  <p>You can also <%= link_to 'cancel your subscription', cancel_owner_subscription_path(@owner, @subscription), method: :post %>.</p>
+<% end %>
