fixed an issue with javascript load order when jquery is placed at the bottom of the page

--- a/app/views/koudoku/subscriptions/_card.html.erb
+++ b/app/views/koudoku/subscriptions/_card.html.erb
@@ -1,4 +1,6 @@
-<script type="text/javascript" src="https://js.stripe.com/v1/"></script>
+<% content_for :javascripts do %>
+  <script type="text/javascript" src="https://js.stripe.com/v1/"></script>
+<% end %>
 
 <%= form_for @subscription, url: url, html: {id: 'payment-form', class: 'form-horizontal'} do |f| %>
 
