--- a/app/views/koudoku/subscriptions/_card.html.erb
+++ b/app/views/koudoku/subscriptions/_card.html.erb
@@ -49,51 +49,53 @@
 
 <% end %>
 
-<script type="text/javascript">
+<% content_for :javascripts do %>
+  <script type="text/javascript">
 
-  // All this code taken from Stripe's own examples at:
-  // https://stripe.com/docs/tutorials/forms .
-  
-  Stripe.setPublishableKey("<%= Koudoku.stripe_publishable_key %>");
-
-  function stripeResponseHandler(status, response) {
-
-      if (response.error) {
-          // show the errors on the form
-          $(".payment-errors").text(response.error.message).show();
-          $(".submit-button").removeAttr("disabled");
-      } else {
-          var form$ = $("#payment-form");
-          // token contains id, last4, and card type
-          // insert the token into the form so it gets submitted to the server
-          form$.append("<input type='hidden' name='subscription[credit_card_token]' value='" + response['id'] + "'/>");
-          form$.append("<input type='hidden' name='subscription[last_four]' value='" + response['last4'] + "'/>");
-          form$.append("<input type='hidden' name='subscription[card_type]' value='" + response['card_type'] + "'/>");
-          // and submit
-          form$.get(0).submit();
-      }
-  }
-
-  $(document).ready(function() {
+    // All this code taken from Stripe's own examples at:
+    // https://stripe.com/docs/tutorials/forms .
     
-    // By default, don't show errors.
-    $(".payment-errors").hide()
-    
-    $("#payment-form").submit(function(event) {
+    Stripe.setPublishableKey("<%= Koudoku.stripe_publishable_key %>");
 
-      // disable the submit button to prevent repeated clicks
-      $('.submit-button').attr("disabled", "disabled");
+    function stripeResponseHandler(status, response) {
 
-      Stripe.createToken({
-          number: $('.card-number').val(),
-          cvc: $('.card-cvc').val(),
-          exp_month: $('.card-expiry-month').val(),
-          exp_year: $('.card-expiry-year').val()
-      }, stripeResponseHandler);
+        if (response.error) {
+            // show the errors on the form
+            $(".payment-errors").text(response.error.message).show();
+            $(".submit-button").removeAttr("disabled");
+        } else {
+            var form$ = $("#payment-form");
+            // token contains id, last4, and card type
+            // insert the token into the form so it gets submitted to the server
+            form$.append("<input type='hidden' name='subscription[credit_card_token]' value='" + response['id'] + "'/>");
+            form$.append("<input type='hidden' name='subscription[last_four]' value='" + response['last4'] + "'/>");
+            form$.append("<input type='hidden' name='subscription[card_type]' value='" + response['card_type'] + "'/>");
+            // and submit
+            form$.get(0).submit();
+        }
+    }
 
-      // prevent the form from submitting with the default action
-      return false;
+    $(document).ready(function() {
+      
+      // By default, don't show errors.
+      $(".payment-errors").hide()
+      
+      $("#payment-form").submit(function(event) {
+
+        // disable the submit button to prevent repeated clicks
+        $('.submit-button').attr("disabled", "disabled");
+
+        Stripe.createToken({
+            number: $('.card-number').val(),
+            cvc: $('.card-cvc').val(),
+            exp_month: $('.card-expiry-month').val(),
+            exp_year: $('.card-expiry-year').val()
+        }, stripeResponseHandler);
+
+        // prevent the form from submitting with the default action
+        return false;
+      });
     });
-  });
-  
-</script>
+    
+  </script>
+<% end %>
