fixing indentation and a grammar mistake in subscriptions/show.html.erb

--- a/app/views/koudoku/subscriptions/show.html.erb
+++ b/app/views/koudoku/subscriptions/show.html.erb
@@ -1,11 +1,11 @@
 <% if @subscription.plan.present? %>
-<h2>You're Subscribed!</h2>
-<p>Your currently subscribed to the <%= @subscription.plan.name %> plan.</p>
-<%= link_to 'Choose Another Plan', edit_owner_subscription_path(@owner, @subscription), class: 'btn' %>
+  <h2>You're Subscribed!</h2>
+  <p>You're currently subscribed to the <%= @subscription.plan.name %> plan.</p>
+  <%= link_to 'Choose Another Plan', edit_owner_subscription_path(@owner, @subscription), class: 'btn' %>
 <% else %>
-<h2>No Subscription</h2>
-<p>You are not subscribed to a paid plan.</p>
-<%= link_to 'Choose A Plan', edit_owner_subscription_path(@owner, @subscription), class: 'btn' %>
+  <h2>No Subscription</h2>
+  <p>You are not subscribed to a paid plan.</p>
+  <%= link_to 'Choose A Plan', edit_owner_subscription_path(@owner, @subscription), class: 'btn' %>
 <% end %>
 
 <br><br>
