--- a/app/views/koudoku/subscriptions/show.html.erb
+++ b/app/views/koudoku/subscriptions/show.html.erb
@@ -1,15 +1,15 @@
 <% if @subscription.plan.present? %>
-  <h2>You're Subscribed!</h2>
-  <p>You're currently subscribed to the <%= @subscription.plan.name %> plan.</p>
-  <%= link_to 'Choose Another Plan', edit_owner_subscription_path(@owner, @subscription), class: 'btn' %>
+  <h2><%= t('koudoku.subscriptions.subscribed') %></h2>
+  <p><%= t('koudoku.subscriptions.subscribed_to_plan', :plan => @subscription.plan.name) %></p>
+  <%= link_to t('koudoku.subscriptions.choose_other_plan'), edit_owner_subscription_path(@owner, @subscription), class: 'btn' %>
 <% else %>
-  <h2>No Subscription</h2>
-  <p>You are not subscribed to a paid plan.</p>
-  <%= link_to 'Choose A Plan', edit_owner_subscription_path(@owner, @subscription), class: 'btn' %>
+  <h2><%= t('koudoku.subscriptions.no_subscription') %></h2>
+  <p><%= t('koudoku.subscriptions.not_subscribed_to_plan') %></p>
+  <%= link_to t('koudoku.subscriptions.choose_plan'), edit_owner_subscription_path(@owner, @subscription), class: 'btn' %>
 <% end %>
 
 <br><br>
 
-<h4>Payment Information</h4>
-<p>The card on file for your account ends with <%= @subscription.last_four %>.</p>
-<%= link_to 'Update Payment Information', edit_owner_subscription_path(@owner, @subscription, update: 'card'), class: 'btn' %>
+<h4><%= t('koudoku.payment.payment_information') %></h4>
+<p><%= t('koudoku.payment.card_on_file_with_last_four', :last_four => @subscription.last_four) %></p>
+<%= link_to t('koudoku.payment.update_payment_information'), edit_owner_subscription_path(@owner, @subscription, update: 'card'), class: 'btn' %>
