--- a/app/views/koudoku/subscriptions/index.html.erb
+++ b/app/views/koudoku/subscriptions/index.html.erb
@@ -1,2 +1,2 @@
-<h1><%= t('koudoku.pricing.which_plan_is_best') %></h1>
+<h1><%= t('koudoku.subscriptions.which_plan_is_best') %></h1>
 <%= render 'pricing_table' %>
