--- a/app/views/koudoku/subscriptions/_card.html.erb
+++ b/app/views/koudoku/subscriptions/_card.html.erb
@@ -43,7 +43,7 @@
       <% else %>
         <button type="submit" class="btn btn-primary submit-button"><%= t('koudoku.payment.upgrade_account') %></button>
       <% end %>
-      <%= link_to t('koudoku.payment.cancel'), owner_subscriptions_path(@owner), class: 'btn' %>
+      <%= link_to t('koudoku.payment.cancel'), koudoku.owner_subscriptions_path(@owner), class: 'btn' %>
     </div>
   </div>
 
